tests/ui-msrv/invalid-impls/invalid-impls.stderr
error[E0277]: the trait bound `T: zerocopy::FromZeroes` is not satisfied
  --> tests/ui-msrv/invalid-impls/../../../src/macros.rs
   |
   |             impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),*> Subtrait for $ty {}
   |                                                                    ^^^^^^^^ the trait `zerocopy::FromZeroes` is not implemented for `T`
   |
  ::: tests/ui-msrv/invalid-impls/invalid-impls.rs:22:1
   |
22 | impl_or_verify!(T => FromZeroes for Foo<T>);
   | ------------------------------------------- in this macro invocation
   |
note: required because of the requirements on the impl of `zerocopy::FromZeroes` for `Foo<T>`
  --> tests/ui-msrv/invalid-impls/invalid-impls.rs:18:10
   |
18 | #[derive(FromZeroes, FromBytes, AsBytes, Unaligned)]
   |          ^^^^^^^^^^
note: required by a bound in `_::Subtrait`
  --> tests/ui-msrv/invalid-impls/../../../src/macros.rs
   |
   |             trait Subtrait: $trait {}
   |                             ^^^^^^ required by this bound in `_::Subtrait`
   |
  ::: tests/ui-msrv/invalid-impls/invalid-impls.rs:22:1
   |
22 | impl_or_verify!(T => FromZeroes for Foo<T>);
   | ------------------------------------------- in this macro invocation
   = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
22  | impl_or_verify!(T: zerocopy::FromZeroes => FromZeroes for Foo<T>);
    |                  ++++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::FromBytes` is not satisfied
  --> tests/ui-msrv/invalid-impls/../../../src/macros.rs
   |
   |             impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),*> Subtrait for $ty {}
   |                                                                    ^^^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `T`
   |
  ::: tests/ui-msrv/invalid-impls/invalid-impls.rs:23:1
   |
23 | impl_or_verify!(T => FromBytes for Foo<T>);
   | ------------------------------------------ in this macro invocation
   |
note: required because of the requirements on the impl of `zerocopy::FromBytes` for `Foo<T>`
  --> tests/ui-msrv/invalid-impls/invalid-impls.rs:18:22
   |
18 | #[derive(FromZeroes, FromBytes, AsBytes, Unaligned)]
   |                      ^^^^^^^^^
note: required by a bound in `_::Subtrait`
  --> tests/ui-msrv/invalid-impls/../../../src/macros.rs
   |
   |             trait Subtrait: $trait {}
   |                             ^^^^^^ required by this bound in `_::Subtrait`
   |
  ::: tests/ui-msrv/invalid-impls/invalid-impls.rs:23:1
   |
23 | impl_or_verify!(T => FromBytes for Foo<T>);
   | ------------------------------------------ in this macro invocation
   = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
23  | impl_or_verify!(T: zerocopy::FromBytes => FromBytes for Foo<T>);
    |                  +++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::AsBytes` is not satisfied
  --> tests/ui-msrv/invalid-impls/../../../src/macros.rs
   |
   |             impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),*> Subtrait for $ty {}
   |                                                                    ^^^^^^^^ the trait `zerocopy::AsBytes` is not implemented for `T`
   |
  ::: tests/ui-msrv/invalid-impls/invalid-impls.rs:24:1
   |
24 | impl_or_verify!(T => AsBytes for Foo<T>);
   | ---------------------------------------- in this macro invocation
   |
note: required because of the requirements on the impl of `zerocopy::AsBytes` for `Foo<T>`
  --> tests/ui-msrv/invalid-impls/invalid-impls.rs:18:33
   |
18 | #[derive(FromZeroes, FromBytes, AsBytes, Unaligned)]
   |                                 ^^^^^^^
note: required by a bound in `_::Subtrait`
  --> tests/ui-msrv/invalid-impls/../../../src/macros.rs
   |
   |             trait Subtrait: $trait {}
   |                             ^^^^^^ required by this bound in `_::Subtrait`
   |
  ::: tests/ui-msrv/invalid-impls/invalid-impls.rs:24:1
   |
24 | impl_or_verify!(T => AsBytes for Foo<T>);
   | ---------------------------------------- in this macro invocation
   = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
24  | impl_or_verify!(T: zerocopy::AsBytes => AsBytes for Foo<T>);
    |                  +++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::Unaligned` is not satisfied
  --> tests/ui-msrv/invalid-impls/../../../src/macros.rs
   |
   |             impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),*> Subtrait for $ty {}
   |                                                                    ^^^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `T`
   |
  ::: tests/ui-msrv/invalid-impls/invalid-impls.rs:25:1
   |
25 | impl_or_verify!(T => Unaligned for Foo<T>);
   | ------------------------------------------ in this macro invocation
   |
note: required because of the requirements on the impl of `zerocopy::Unaligned` for `Foo<T>`
  --> tests/ui-msrv/invalid-impls/invalid-impls.rs:18:42
   |
18 | #[derive(FromZeroes, FromBytes, AsBytes, Unaligned)]
   |                                          ^^^^^^^^^
note: required by a bound in `_::Subtrait`
  --> tests/ui-msrv/invalid-impls/../../../src/macros.rs
   |
   |             trait Subtrait: $trait {}
   |                             ^^^^^^ required by this bound in `_::Subtrait`
   |
  ::: tests/ui-msrv/invalid-impls/invalid-impls.rs:25:1
   |
25 | impl_or_verify!(T => Unaligned for Foo<T>);
   | ------------------------------------------ in this macro invocation
   = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
25  | impl_or_verify!(T: zerocopy::Unaligned => Unaligned for Foo<T>);
    |                  +++++++++++++++++++++
